--- a/references.bib
+++ b/references.bib
@@ -808,6 +808,24 @@
 	pages = {306--313}
 }
 
+@article{wennersten_population-level_2012,
+	title = {Population-level consequences of polymorphism, plasticity and randomized phenotype switching: a review of predictions},
+	volume = {87},
+	issn = {14647931},
+	shorttitle = {Population-level consequences of polymorphism, plasticity and randomized phenotype switching},
+	url = {http://doi.wiley.com/10.1111/j.1469-185X.2012.00231.x},
+	doi = {10.1111/j.1469-185X.2012.00231.x},
+	language = {english},
+	number = {3},
+	urldate = {2021-02-28},
+	journal = {Biological Reviews},
+	author = {Wennersten, Lena and Forsman, Anders},
+	month = aug,
+	year = {2012},
+	pages = {756--767}
+}
+
+
 
 @article{zaman_coevolution_2014,
 	title = {Coevolution {Drives} the {Emergence} of {Complex} {Traits} and {Promotes} {Evolvability}},
@@ -892,33 +910,88 @@
 	pages = {e1009314}
 }
 
+@article{gomulkiewicz_when_1995,
+	title = {When does {Evolution} by {Natural} {Selection} {Prevent} {Extinction}?},
+	volume = {49},
+	issn = {00143820},
+	url = {https://www.jstor.org/stable/2410305?origin=crossref},
+	doi = {10.2307/2410305},
+	number = {1},
+	urldate = {2021-02-28},
+	journal = {Evolution},
+	author = {Gomulkiewicz, Richard and Holt, Robert D.},
+	month = feb,
+	year = {1995},
+	pages = {201}
+}
+
+@article{chevin_adaptation_2010,
+	title = {Adaptation, {Plasticity}, and {Extinction} in a {Changing} {Environment}: {Towards} a {Predictive} {Theory}},
+	volume = {8},
+	issn = {1545-7885},
+	shorttitle = {Adaptation, {Plasticity}, and {Extinction} in a {Changing} {Environment}},
+	url = {https://dx.plos.org/10.1371/journal.pbio.1000357},
+	doi = {10.1371/journal.pbio.1000357},
+	language = {english},
+	number = {4},
+	urldate = {2020-10-09},
+	journal = {PLoS Biology},
+	author = {Chevin, Luis-Miguel and Lande, Russell and Mace, Georgina M.},
+	editor = {Kingsolver, Joel G.},
+	month = apr,
+	year = {2010},
+	pages = {e1000357}
+}
 
 
+@article{schaum_plasticity_2014,
+	title = {Plasticity predicts evolution in a marine alga},
+	volume = {281},
+	issn = {0962-8452, 1471-2954},
+	url = {https://royalsocietypublishing.org/doi/10.1098/rspb.2014.1486},
+	doi = {10.1098/rspb.2014.1486},
+	language = {english},
+	number = {1793},
+	urldate = {2021-02-28},
+	journal = {Proceedings of the Royal Society B: Biological Sciences},
+	author = {Schaum, C. Elisa and Collins, Sinéad},
+	month = oct,
+	year = {2014},
+	pages = {20141486}
+}
 
 
+@article{murren_constraints_2015,
+	title = {Constraints on the evolution of phenotypic plasticity: limits and costs of phenotype and plasticity},
+	volume = {115},
+	issn = {0018-067X, 1365-2540},
+	shorttitle = {Constraints on the evolution of phenotypic plasticity},
+	url = {http://www.nature.com/articles/hdy20158},
+	doi = {10.1038/hdy.2015.8},
+	language = {english},
+	number = {4},
+	urldate = {2019-08-09},
+	journal = {Heredity},
+	author = {Murren, C J and Auld, J R and Callahan, H and Ghalambor, C K and Handelsman, C A and Heskel, M A and Kingsolver, J G and Maclean, H J and Masel, J and Maughan, H and Pfennig, D W and Relyea, R A and Seiter, S and Snell-Rood, E and Steiner, U K and Schlichting, C D},
+	month = oct,
+	year = {2015},
+	pages = {293--301}
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+@article{chadwick_parasite-mediated_2005,
+	title = {A parasite-mediated life-history shift in \textit{{Daphnia} magna}},
+	volume = {272},
+	issn = {0962-8452, 1471-2954},
+	url = {https://royalsocietypublishing.org/doi/10.1098/rspb.2004.2959},
+	doi = {10.1098/rspb.2004.2959},
+	language = {english},
+	number = {1562},
+	urldate = {2021-02-28},
+	journal = {Proceedings of the Royal Society B: Biological Sciences},
+	author = {Chadwick, William and Little, Tom J},
+	month = mar,
+	year = {2005},
+	pages = {505--509}
+}
 
 
