--- a/tex/methods.tex
+++ b/tex/methods.tex
@@ -25,6 +25,8 @@ The instruction set includes operations for basic computations, flow control (e.
 % @AML: Outsource the next sentence to a figure!
 % The virtual hardware set includes components such as a central processing unit (CPU) for executing instructions, registers to store values, buffers for inputs and outputs, and memory stacks \citep{ofria_avida:_2009}.
 
+\input{tex/figures/avida-virtual-hardware}
+
 % - define reproduction & mutation -
 Organisms in Avida reproduce asexually by copying their genome instruction-by-instruction and then dividing. 
 However, copy operations are imperfect and can result in single-instruction substitution mutations in an offspring's genome. 
