--- a/tex/scratch.tex
+++ b/tex/scratch.tex
@@ -529,3 +529,12 @@ In this way, we can reward or punish particular phenotypic traits.
 
 Under some circumstances, phenotypic plasticity can serve as cache of hidden genetic variation that, when revealed to selection, will result in a rapid evolutionary response (e.g., genetic accommodation if the variation is adaptive).
 [However, our results... For rapid cycling environments where the magnitude of changes are consistent, our results indicate that we should not necessarily assume accumulation of cryptic variation in plastic responses.]
+
+%over intra-generational timescales
+%In a changing environment, adaptive phenotypic plasticity provides a mechanism for organisms to regulate trait expression within lifetime, which can both promote the initial survival of populations and reduce the probability of extinction \citep{gibert_phenotypic_2019} [conceptual figure (see comment)?].
+
+% In this context, the [conventional/traditional] view is that adaptive plasticity will constrain the rate of adaptive evolution \citep{gupta_study_1982,ancel_undermining_2000,huey_behavioral_2003,price_role_2003,paenke_influence_2007}.
+
+% In contrast, non-adaptive plasticity can shift a trait further away from the phenotypic optimum in response to an environmental cue.
+% Non-adaptive plasticity can increase a population's extinction risk, especially if a [misaligned] plastic trait is strongly tied to survival [citations].
+% If the population persists, however, the population should experience strong directional selection against maladaptive responses to environmental cues, resulting in rapid evolutionary change [citations].
