--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -14,7 +14,7 @@ phenotypic plasticity \citep{ghalambor_adaptive_2007},
 bet hedging \citep{beaumont_experimental_2009}, 
 periodic migration \citep{winger_long_2019}, 
 and adaptive tracking \citep{barrett_adaptation_2008}.
-The particular coping mechanisms that evolve in fluctuating environments shift the course of subsequent evolution [citations].
+The particular coping mechanisms that evolve in fluctuating environments shift the course of subsequent evolution \citep{wennersten_population-level_2012,schaum_plasticity_2014}.
 Identifying the mechanisms most likely to evolve and examining both the evolutionary constraints and opportunities associated with each is critical for us to understand and predict evolutionary outcomes in changing environments.
 
 %%%%%%%%%%%%%%%%%%%%%%
@@ -22,7 +22,7 @@ Identifying the mechanisms most likely to evolve and examining both the evolutio
 %%%%%%%%%%%%%%%%%%%%%%
 In this work, we focus on phenotypic plasticity, which can be defined as the capacity for a single genotype to alter phenotypic expression in response to a change in its environment \citep{west-eberhard_developmental_2003}. 
 Phenotypic plasticity is controlled by genes whose expression is coupled to one or more abiotic or biotic environmental signals. 
-For example, the sex ratio of the crustacean \textit{Gammarus duebeni} is modulated by changes in photoperiod and temperature \citep{dunn_two_2005}, and the reproductive output of some invertebrate species is heightened when infected with parasites to compensate for offspring loss [CITE]. 
+For example, the sex ratio of the crustacean \textit{Gammarus duebeni} is modulated by changes in photoperiod and temperature \citep{dunn_two_2005}, and the reproductive output of some invertebrate species is heightened when infected with parasites to compensate for offspring loss \citep{chadwick_parasite-mediated_2005}. 
 In this study, we conducted digital evolution experiments to investigate how the evolution of adaptive phenotypic plasticity shifts the course of evolution in a cyclically changing environment.
 Specifically, we examined the effects of adaptive plasticity on subsequent genomic and phenotypic change, the capacity to evolve and then maintain novel traits, and the accumulation of deleterious alleles.
 
@@ -33,15 +33,11 @@ Specifically, we examined the effects of adaptive plasticity on subsequent genom
 %%%%%%%%%%%%%%
 Evolutionary biologists have long been interested in how evolutionary change across generations is influenced by phenotypic plasticity because of its role in generating phenotypic variance \citep{gibert_phenotypic_2019}.
 The effects of phenotypic plasticity on adaptive evolution have been disputed, as few studies have been able to observe both the initial patterns of plasticity and the subsequent divergence of traits in natural populations \citep{ghalambor_adaptive_2007,wund_assessing_2012,forsman_rethinking_2015,ghalambor_non-adaptive_2015,hendry_key_2016}.
-%over intra-generational timescales
-%In a changing environment, adaptive phenotypic plasticity provides a mechanism for organisms to regulate trait expression within lifetime, which can both promote the initial survival of populations and reduce the probability of extinction \citep{gibert_phenotypic_2019} [conceptual figure (see comment)?].
 In a changing environment, adaptive phenotypic plasticity provides a mechanism for organisms to regulate trait expression within their lifetime, which can stabilize populations through changes \citep{gibert_phenotypic_2019} [conceptual figure (see comment)?].
-% In this context, the [conventional/traditional] view is that adaptive plasticity will constrain the rate of adaptive evolution \citep{gupta_study_1982,ancel_undermining_2000,huey_behavioral_2003,price_role_2003,paenke_influence_2007}.
 In this context, the stabilization effects of adaptive plasticity have been hypothesized to constrain the rate of adaptive evolution \citep{gupta_study_1982,ancel_undermining_2000,huey_behavioral_2003,price_role_2003,paenke_influence_2007}.
-That is, directional selection may be weak if environmentally-induced phenotypes are close to the optimum; as such, adaptively plastic populations may evolve slowly (relative to non-plastic populations) unless there is a substantial fitness cost to plasticity [cite].
-% In contrast, non-adaptive plasticity can shift a trait further away from the phenotypic optimum in response to an environmental cue.
-% Non-adaptive plasticity can increase a population's extinction risk, especially if a [misaligned] plastic trait is strongly tied to survival [citations].
-% If the population persists, however, the population should experience strong directional selection against maladaptive responses to environmental cues, resulting in rapid evolutionary change [citations].
+That is, directional selection may be weak if environmentally-induced phenotypes are close to the optimum; as such, adaptively plastic populations may evolve slowly (relative to non-plastic populations) unless there is a substantial fitness cost to plasticity.
+
+\input{tex/figures/reaction-norms}
 
 % -- Plasticity as a source of cryptic variation --
 Phenotypic plasticity allows for the accumulation of genetic variation in genomic regions that are unexpressed under current environmental conditions.
@@ -53,8 +49,6 @@ The ``genes as followers'' hypothesis (also known as the ``plasticity first'' hy
 Environmentally-induced trait changes can be refined through selection over time (i.e., genetic accommodation).
 Further, selection may drive plastic phenotypes to lose their environmental dependence over time in a process known as genetic assimilation \citep{west-eberhard_developmental_2005,pigliucci_phenotypic_2006,crispo_baldwin_2007,schlichting_phenotypic_2014,levis_evaluating_2016}. 
 In this way, environmentally-induced phenotypic changes can precede an evolutionary response.
-
-% -- Editing w/Charles bookmark --
 
 % -- Plastic rescue + wrap up on plasticity background? --
 Phenotypic plasticity may also `rescue' populations from extinction under changing environmental conditions by buffering populations against novel stressors.
@@ -92,15 +86,15 @@ Each experiment is divided into two phases: in phase one, we precondition sets o
 in phase two, we examine the subsequent evolution of populations founded with organisms from phase one under specific environmental conditions [figure].
 First, we examine the evolutionary histories of phase two populations to test whether adaptive plasticity constrained subsequent genomic and phenotypic changes. 
 Next, we evaluate how adaptive plasticity influences fitness landscape exploration and exploitation by identifying how well populations produced by each type of founder are able to evolve and retain novel adaptive traits.
-% @AML: TODO - we tested whether.... [hypothesis]
-Finally, we test whether adaptive plasticity facilitates the accumulation of deleterious genes via cryptic genetic variation by measuring the frequency with which deleterious mutations occur along successful lineages. 
+Finally, we test whether adaptive plasticity facilitated the accumulation of deleterious genes via cryptic genetic variation by measuring the frequency with which deleterious mutations occur along successful lineages. 
 % [Finally we examine the frequency with which deleterious mutations occur along successful lineages in each type of population in order to understand how and why different types of plasticity allow or prevent].
 
 %%%%%%%%%%%%%%%%%%%%%%
 % - Overview of findings -
 %%%%%%%%%%%%%%%%%%%%%%
 % TODO - incorporate architecture results
-We found that adaptively plastic populations evolve more slowly than non-plastic populations in a cyclic environment. 
+We found that the evolution of adaptive plasticity reduced subsequent rates of evolutionary change in a cyclic environment.
+% We found that adaptively plastic populations evolve more slowly than non-plastic populations in a cyclic environment. 
 The non-plastic populations underwent more frequent selective sweeps and accumulated many more genetic changes over time, as non-plastic populations relied on genetic variation from \textit{de novo} mutations to continuously re-adapt to environmental changes. 
 We found that the evolution of adaptive phenotypic plasticity buffers populations against environmental fluctuations, whereas repeated selective sweeps in non-plastic populations drive the accumulation of deleterious genes and the loss of secondary beneficial traits via deleterious hitchhiking.
 As such, adaptively plastic populations were better able to retain novel traits than their non-plastic counterparts.
