edits from 2021-03-01 meeting

--- a/tex/figures/avida-virtual-hardware.tex
+++ b/tex/figures/avida-virtual-hardware.tex
@@ -7,3 +7,9 @@
     }
     \label{fig:avida-virtual-hardware}
 \end{figure}
+
+% Feedback:
+%  - make grid non-repetitive
+%    - as tile rotate
+%  - output a task? 
+%    - one of first 6
