--- a/tex/figures/reaction-norms.tex
+++ b/tex/figures/reaction-norms.tex
@@ -7,3 +7,12 @@
     }
     \label{fig:reaction-norms}
 \end{figure}
+
+% Feedback
+%  - Ideas: color background red/blue
+%  - Titles on (a), (b), (c), (d)?
+%    - Swap (c) & (d)
+%    - non-plastic, adaptive plasticity, non-adaptive plasticity, maladaptive plasticity
+%  - (e) environmental scenario/environment
+% - Increase font sizes
+% - pull word that says time outside the arrow, make arrow smaller, make environment bar bigger => increase font size
