--- a/tex/discussion.tex
+++ b/tex/discussion.tex
@@ -25,7 +25,7 @@ Below we discuss the specific implications of the results from each of our three
 % -- Overview of main evolutionary change results --
 Adaptively plastic populations experienced fewer selective sweeps and fewer total genetic changes relative to non-plastic populations evolving in the same environmental conditions.
 Plastic populations adapted to environmental changes by relying on environmentally-induced cues and within-lifetime regulation, which also stabilized these populations against fluctuations. 
-Because ENV-A and ENV-B were incompatible (i.e., adaptive phenotypes in ENV-A were maladaptive in ENV-B and vice versa), non-plastic generalists did not evolve; any non-plastic generalist (e.g., that performed all tasks or performed no tasks) would have been quickly outcompeted by a specialist strategy because of the large fitness benefit for performing environment-specific tasks.
+Because ENV-A and ENV-B were incompatible (i.e., adaptive phenotypes in ENV-A were maladaptive in ENV-B and vice versa), non-plastic generalists did not evolve; any non-plastic generalist (e.g., that performed all tasks or performed no tasks) would have been quickly outcompeted by a specialist strategy because of the large fitness benefit for performing environment-specific tasks (and only those tasks).
 As such, non-plastic populations repeatedly required genetic modifications to respond to environmental changes and thus exhibited frequent selective sweeps during each new readaptation.
 Indeed, across all three of our experiments, the evolutionary dynamics of plastic populations were more similar to that of populations evolving in a static environment than to that of non-plastic populations evolving in an identical fluctuating environment.
 
@@ -34,16 +34,16 @@ Indeed, across all three of our experiments, the evolutionary dynamics of plasti
 % -- in context of previous digital evolution work --
 This study is the first in-depth empirical investigation into how the \textit{de novo} evolution of adaptive plasticity shifts the course of subsequent evolution in a cyclic environment.
 The evolutionary dynamics that we observed in non-plastic populations, however, are consistent with results from previous digital evolution studies. 
-\cite{dolson_interpreting_2020} proposed a suite of lineage and phylogeny metrics for quantifying the evolutionary histories of evolving populations of digital organisms; consistent with our findings, they observed that non-plastic populations evolved in cyclically changing environments exhibited higher phenotypic volatility and mutation accumulation than that of populations evolving in static conditions.
+\cite{dolson_interpreting_2020} proposed a suite of lineage and phylogeny metrics for quantifying the evolutionary histories of evolving populations of digital organisms; consistent with our findings, they observed that non-plastic populations that were evolved in cyclically changing environments exhibited higher phenotypic volatility and mutation accumulation than that of populations evolved in static conditions.
 \cite{lalejini_evolutionary_2016} visually inspected the evolutionary histories of non-plastic organisms evolved in fluctuating environments, observing that mutations readily switched the set of traits expressed by offspring.
 \cite{canino-koning_evolution_2016} investigated how different types of changing environments shape the genetic architectures of evolved organisms, showing that cyclically-changing environments can steer populations toward genotypes that more readily mutate to alternative phenotypes.
-Consistent with our experimental results, \cite{canino-koning_evolution_2016} also observed that genomes evolved in harsh cyclic environments often contained vestigial fragments of genetic material adapted to prior environments.
+\cite{canino-koning_evolution_2016} also observed that genomes evolved in harsh cyclic environments often contained vestigial fragments of genetic material adapted to prior environments.
 
 %  - @Austin - depending on what you include about architecture results, you'll also want to work in results from Canino-Koning (2019); going to talk about their novel tasks results in next subsection.
 
 % -- In context of conventional evolutionary theory: evo response => f(selection, variation) --
 Our results are also consistent with conventional evolutionary theory.
-A trait's evolutionary response to selection depends on the strength of directional selection and on the amount of genetic variation for selection to act on \citep{lande_measurement_1983,zimmer_evolution_2013}.
+A trait's evolutionary response to selection depends on the strength of directional selection and on the amount of genetic variation for selection to act upon \citep{lande_measurement_1983,zimmer_evolution_2013}.
 In our experiments, non-plastic populations repeatedly experienced strong directional selection to toggle which tasks were expressed after each environmental change.
 As such, retrospective analyses of successful lineages revealed rapid evolutionary responses (that is, high rates of genetic and phenotypic changes).
 % WOULD BE NICE: [relevant examples of these dynamics from literature].
@@ -66,39 +66,43 @@ Indeed, both theoretical and empirical studies have shown that adaptive plastici
 We observed evidence of mutation accumulation in plastic lineages that resulted in the loss of unexpressed traits that would have been important for survival in the alternate environment.
 These mutations would have proven detrimental when the environment changed.
 However, because our analyses focused retrospectively on successful lineages, nearly all of these mutations were followed by a compensatory mutation that restored the lost trait before the environment changed and it needed to be expressed.
-Environmental fluctuations in our experiments were tuned to be frequent enough that genes needed to function appropriately in the off environment (whether those genes were unexpressed or associated with task regulation) were not lost from the population due to relaxed selection [See supplemental ???].
+% Environmental fluctuations in our experiments were tuned to be frequent enough so that genes needed to function appropriately in the off environment were not lost from the population due to relaxed selection (whether those genes were unexpressed or associated with task regulation) [See supplemental ???].
+We tuned the frequency of environmental fluctuations so that genes that needed to function appropriately in the off environment were able to remain in the population despite relaxed selection [See supplemental ???].
 Additionally, we imposed no explicit costs on phenotypic plasticity, which minimized selection against the maintenance of plastic genes during the periods between environmental changes.  
 % [relevant examples of these dynamics/predictions about how results change if plasticity is costly?].
 
 \vspace{0.25cm}
-\subsection{Adaptively plastic populations retain more novel traits than non-plastic populations in fluctuation environments}
+\subsection{Adaptively plastic populations retain more novel traits than non-plastic populations in fluctuating environments}
 
 % -- overview --
 % - Exploration -
-In our second experiment, we evaluated if adaptive plasticity influences fitness landscape exploration and exploitation in a cyclic environment by testing the ability of different treatment populations to evolve and then maintain novel tasks.
-We found that in a fluctuating environment non-plastic populations explored a larger portion of the fitness landscape than adaptively plastic populations.
-That is, non-plastic populations discovered more novel tasks than adaptively plastic populations.
+In our second experiment, we evaluated if adaptive plasticity influences fitness landscape exploration and exploitation by testing the ability of different treatment populations to evolve and then maintain novel tasks. 
+In fluctuating environments, we found that non-plastic populations explored more of the fitness landscape than adaptively plastic populations, as measured by the number of novel tasks discovered.
+% Specifically, non-plastic populations discovered more novel tasks. %than adaptively plastic populations.
 
 % - Exploitation -
 Despite lower overall task discovery, we found that adaptively plastic populations better exploited the fitness landscape, retaining a greater number of novel tasks than non-plastic populations evolving under identical environmental conditions.
-Evolution in non-plastic populations was dominated by repeated bouts of strong directional selection on each of the six base tasks after each environmental change. 
-In our experiment, novel tasks were less important to survival than the fluctuating tasks.
-In non-plastic populations, mutations that improve an offspring's fitness after the environment changes are enormously beneficial. 
-Such beneficial mutations can drive co-occurring deleterious mutations that knock out novel tasks to fixation because there is no horizontal gene transfer in our system (that is, all mutations are linked).
-Indeed, we found that mutations associated with novel task loss along successful lineages from non-plastic populations overwhelmingly co-occurred with mutations that helped offspring adapt to environmental changes.
+%Evolution in non-plastic populations was dominated by repeated bouts of strong directional selection, since it occurred on each of the six base tasks after each environmental change.
+Evolution in non-plastic populations was dominated by numerous bouts of strong directional selection.  
+This effect was driven by repeated environmental changes; after each change, the performance of the six base tasks needed to be realigned. 
+In our experiment, novel tasks were less important to survival than the fluctuating base tasks.
+In non-plastic populations, mutations that improve an offspring's fitness after an environmental change are enormously beneficial. 
+As such beneficial mutations fix, they can carry with them co-occurring deleterious mutations that knock out novel tasks. % to fixation because there is no horizontal gene transfer in our system (that is, all mutations are linked).
+Indeed, we found that mutations associated with novel task loss along successful lineages from non-plastic populations co-occurred with mutations that helped offspring adapt to environmental changes an overwhelming 97\% of the time.
 
 % -- Changing environments promote evolutionary change --
 \cite{nahum_improved_2017} demonstrated that a single temporary environmental change can improve fitness landscape exploration and exploitation in evolving populations of non-plastic digital organisms.
 % insert more changing environments promote evo change results
-In our system, however, we found that \textit{repeated} fluctuations reduced the ability of non-plastic populations to maintain and exploit tasks; though, we did find that repeated fluctuations may improve overall task discovery. 
+In our system, however, we found that \textit{repeated} fluctuations reduced the ability of non-plastic populations to maintain and exploit tasks; that said, we did find that repeated fluctuations may improve overall task discovery. 
 Consistent with our findings, \cite{canino-koning_fluctuating_2019} found that non-plastic populations of digital organisms evolving in a harsh cyclic environment maintained fewer novel traits than populations evolving in static environments.
+% [@Austin: one or two more relevant examples => computational stuff is fine]
 % [relevant literature on changing environments + fitness landscape exploration].
 % - [Kashtan et al 2007] - temporally varying goals speed up evolutionary adaptation
 
 % -- Plastic rescue, stabilizing effect of plasticity --
-Our results suggest that adaptive phenotypic plasticity can improve the potential for populations to exploit novel resources by stabilizing populations against stressful environmental changes.
-Our results also lend some support to the hypothesis that phenotypic plasticity can rescue populations from extinction under changing environmental conditions by promoting stability and persistence [cite].
-While our experiments do not explore the likelihood of extinction, we did observe that the stabilizing effect of adaptive phenotypic plasticity allowed populations to more effectively exploit novel resources.
+Our results suggest that adaptive phenotypic plasticity can improve the potential for populations to exploit novel resources by stabilizing them against stressful environmental changes.
+The stability that we observe may also lend some support to the hypothesis that phenotypic plasticity can rescue populations from extinction under changing environmental conditions [cite].
+%While our experiments do not explore the likelihood of extinction, we did observe that the stabilizing effect of adaptive phenotypic plasticity allowed populations to more effectively exploit novel resources.
 % [relevant examples from literature?]
 % - Evolutionary computation?
 % - Wet lab systems?
@@ -107,35 +111,38 @@ While our experiments do not explore the likelihood of extinction, we did observ
 % -- relevance to genes as followers hypothesis --.
 Our data do not necessarily provide evidence for or against the genes as followers hypothesis.
 The genes as followers hypothesis focuses on contexts where plastic populations experience novel or abnormally stressful environmental change.
-However, in our system, environmental changes were cyclic, and the magnitude of changes were consistent for the entirety of the experiment.
-During the experimental phase of the experiment, no offspring experienced an environment that was not experienced by many of their ancestors.
-Further, the introduction of novel tasks during the second experimental phase did not change the meaning of environmental cues; that is, the novel environmental conditions (i.e., the introduction of novel tasks) did not change the background fluctuating environment.
+However, in our system, environmental changes were cyclic (not novel), and the magnitude of changes were consistent for the entirety of the experiment (so none were abnormally stressful).
+% During the second phase of our experiment, no offspring experienced an environment that was not experienced by many of their ancestors.
+Further, the introduction of novel tasks during the second phase of the experiment merely added additional static opportunities for fitness improvement and did not change the meaning of existing environmental cues. %or it merely added additional static opportunities for fitness improvement.
+%; that is, the novel environmental conditions (i.e., the introduction of novel tasks) did not change the background fluctuating environment.
 % [most scenarios hypothesized where plasticity promotes adaptive evolution, change in environment changes phenotypic expression, exposing unexpressed variation; however, this was not the case for this experiment. Novel environmental conditions did not change sensory input].
 % Less evolutionary change + lower task discovery
 
 \vspace{0.25cm}
-\subsection{Non-plastic populations experience more deleterious gene accumulation than adaptively plastic populations in fluctuating environments}
+\subsection{Non-plastic populations experience more deleterious gene accumulation in fluctuating environments}
 
 % -- Overview of results --
 %   - More accumulation in non-plastic
 %   - no evidence for cryptic variation housing poison
 %   - plastic ~~ static
-In our third experiment, we evaluated if adaptive plasticity influences the accumulation of explicitly deleterious genes (\code{poison} instructions) in genomes evolving in our system.
-We found that non-plastic lineages evolved in a fluctuating environment exhibited both larger totals and higher rates of \code{poison} accumulation than that of adaptively plastic lineages.
-We did not find evidence that \code{poison} instructions accumulated as cryptic variation in plastic lineages.
-Indeed, \code{poison} accumulation in the lineages of adaptively plastic genotypes did not different significantly from that of the lineages of genotypes evolved in static conditions.
+In our third experiment, we evaluated if adaptive plasticity influences the accumulation of explicitly deleterious genes (\code{poison} instructions) in evolving genomes.
+We found that non-plastic lineages that evolved in a fluctuating environment exhibited both larger totals and higher rates of \code{poison} accumulation than that of adaptively plastic lineages.
+We did not find evidence of \code{poison} instructions accumulating as cryptic variation in plastic lineages.
+Indeed, \code{poison} accumulation in the lineages of adaptively plastic genotypes did not differ significantly from that of the lineages of genotypes evolved in static conditions.
 
 % -- Elaboration on non-plastic result --
 % - accumulation in non-plastic treatment driven by genetic hitchhiking
-We hypothesize that the elevated rates of \code{poison} instruction accumulation along non-plastic lineages evolved in changing environments was primarily driven by deleterious genetic hitchhiking.
-In asexual populations without horizontal gene transfer, all mutations are linked.
-As such, deleterious mutations that co-occur with a beneficial mutation (i.e., a driver) can sometimes `hitchhike' to fixation \citep{smith_hitch-hiking_1974,van_den_bergh_experimental_2018,buskirk_hitchhiking_2017}.
+%We hypothesize that \code{poison} instruction accumulation along non-plastic lineages in changing environments was primarily driven by deleterious genetic hitchhiking.
+We hypothesize that deleterious genetic hitchhiking drove \code{poison} instruction accumulation along non-plastic lineages in changing environments.
+In asexual populations without horizontal gene transfer, all co-occurring mutations are linked.
+As such, deleterious mutations linked with a stronger beneficial mutation (i.e., a driver) can sometimes `hitchhike' to fixation \citep{smith_hitch-hiking_1974,van_den_bergh_experimental_2018,buskirk_hitchhiking_2017}.
 Natural selection normally prevents deleterious mutations from reaching high frequencies, as such mutants would be outcompeted.
-However, when a beneficial mutation sweeps to fixation in a clonal population, so too does any linked genetic material, including other beneficial, neutral, or deleterious mutations [(as long as negative fitness effect does not outweigh benefits of driver(s))] \cite{barton_genetic_2000, smith_hitch-hiking_1974}.
+However, when a beneficial mutation sweeps to fixation in a clonal population, it carries along any linked genetic material, including other beneficial, neutral, or deleterious mutations  \cite{barton_genetic_2000, smith_hitch-hiking_1974}.
 
-Across our experiments, the rapid frequency of selective sweeps in non-plastic populations evolving in changing environments afforded more opportunities for genetic hitchhiking than that of populations evolving under other treatments. 
+% Across our experiments, the rapid frequency of selective sweeps in non-plastic populations that evolved in changing environments afforded more opportunities for genetic hitchhiking than that of populations evolving under other treatments. 
+Across our experiments, the selective sweeps in non-plastic populations provided additional opportunities for genetic hitchhiking with each environmental change. 
 Indeed, across our experiments, successful lineages from non-plastic populations in the cyclic environment exhibited higher mutation accumulation, novel trait loss, and \code{poison} instruction accumulation than their plastic counterparts.
-In aggregate, we found that many ($\sim$49\%; XX / XX) mutations that increased \code{poison} instruction execution in offspring co-occurred with mutations that helped the offspring adapt to an environmental change.
+In aggregate, we found that many ($\sim$49\%; XX / XX) mutations that increased \code{poison} instruction execution in offspring co-occurred with mutations that provided an even stronger benefit by adapting the offspring to an environmental change.
 This rate of co-occurrence is conservative because we did not analyze mutations that became linked in different generations.
 
 % -- Elaboration on plastic result --
@@ -143,8 +150,8 @@ We found that adaptive phenotypic plasticity reduced \code{poison} instruction a
 We did not find compelling evidence of cryptic variation harboring \code{poison} instructions in adaptively plastic lineages.
 We have two hypotheses for why we did not observe the accumulation of \code{poison} instructions in unexpressed plastic responses.
 First, the period of time between environmental changes was too fast for variants carrying unexpressed \code{poison} instructions to reach high frequencies before the environment changed, after which such variants would have been outcompeted.
-Second, the plastic machinery that evolves in Avida is typically well-integrated and highly specific; that is, plastic genomes usually adjust their phenotypic expression by toggling a minimal number of key instructions ([though, toggling of larger sequences is possible but more complex to encode]) [cite - OSF?].
-[As such, there is minimal genetic space for variation to accumulate in existing regulated regions.]
+Second, the plastic machinery that evolves in Avida is typically well-integrated and highly specific; that is, plastic genomes usually adjust their phenotypic expression by toggling a minimal number of key instructions ([though, toggling of larger sequences is possible but more complex]) [cite - supplement].
+As such, there is minimal genomic space for variation to accumulate in preexisting (but currently unexpressed) regulated regions.
 
 
 % [Several possibilities for why we did not observe poison instruction accumulation in unexpressed genetic variation.]
@@ -155,6 +162,8 @@ Second, the plastic machinery that evolves in Avida is typically well-integrated
 
 \vspace{0.25cm}
 \subsection{Limitations and future directions}
+
+% --- editing with Charles bookmark ---
 
 % -- Adaptive vs non-adaptive plasticity --
 Our conclusions are limited to \textit{adaptively} plastic populations.
