--- a/tex/results.tex
+++ b/tex/results.tex
@@ -3,9 +3,12 @@
 
 \section{Results}
 
+% Go through results, ask what the reader should be thinking about to 
+
 \subsection{Evolutionary change}
 
 \input{tex/figures/evolutionary-change-panel}
+\input{tex/figures/architecture_locus_functionality}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Results to report (2021-02-08 experiment)
