--- a/tex/scratch.tex
+++ b/tex/scratch.tex
@@ -538,3 +538,24 @@ Under some circumstances, phenotypic plasticity can serve as cache of hidden gen
 % In contrast, non-adaptive plasticity can shift a trait further away from the phenotypic optimum in response to an environmental cue.
 % Non-adaptive plasticity can increase a population's extinction risk, especially if a [misaligned] plastic trait is strongly tied to survival [citations].
 % If the population persists, however, the population should experience strong directional selection against maladaptive responses to environmental cues, resulting in rapid evolutionary change [citations].
+
+
+% @AML: something about how measurement deviations among experimental treatments represent differences in dynamics/selection pressures experienced by populations over time?
+
+% Deviations in measurements taken along lineages from different  
+% Deviations among experimental treatments in represent differences in selection pressures/evolutionary dynamics.
+% We simplified these lineages by collapsing sequential, genetically identical organisms into a single state represented by the associated genotype.
+% Given the deterministic nature of genome execution, such a simplification should not lose any information relevant to this study [cite - supplement].
+
+% Different evolutionary contexts are expected to result in different rates of mutation accumulation along successful lineages [citations; Barrick 2013?].
+% Most trivially, we expect larger mutation accumulation in environments with high mutation rates.
+% We would expect strong [purifying/stabilizing] selection to result in lower mutation accumulation relative to lineages evolved under weak selection with [large amount of genetic drift] [citations].
+% We might also expect lineages that must continuously adapt to a changing environment via \textit{de novo} genetic changes to exhibit high mutation accumulation relative to lineages evolved under constant environmental conditions [citations; Tape of life].
+
+% [Sentence about when we might expect *frequent* selective sweeps].
+% We track the rate of coalescence events: how often the most recent common ancestor for each evolving population changes.
+% [todo - more literature review on coalescence theory here].
+% [one more sentence tying selective sweeps to rate of evolutionary change with evolutionary theory].
+
+
+We conducted a series of experiments using Avida to investigate how the evolution of adaptive plasticity influences evolutionary outcomes in  
