edits in introduction

--- a/tex/scratch.tex
+++ b/tex/scratch.tex
@@ -559,3 +559,8 @@ Under some circumstances, phenotypic plasticity can serve as cache of hidden gen
 
 
 We conducted a series of experiments using Avida to investigate how the evolution of adaptive plasticity influences evolutionary outcomes in  
+
+% Our experiments build directly on previous digital evolution studies on the evolution of adaptive phenotypic plasticity \citep{clune_investigating_2007,lalejini_evolutionary_2016} and on the evolutionary consequences of fluctuating environments \citep{wilke_evolution_2001,canino-koning_fluctuating_2019}.
+
+% Indeed, previous work experimentally demonstrated the \textit{de novo} evolution of adaptive phenotypic plasticity given these conditions in Avida \citep{clune_investigating_2007,lalejini_evolutionary_2016}.
+% Maybe this too: These experiments build directly on previous digital evolution studies on the evolution of adaptive phenotypic plasticity \citep{clune_investigating_2007,lalejini_evolutionary_2016} and on the evolutionary consequences of fluctuating environments \citep{wilke_evolution_2001,canino-koning_fluctuating_2019}.
