--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -81,32 +81,21 @@ Avida is an open-source system that has been used to conduct a wide range of wel
 the origins of complex features \citep{lenski_evolutionary_2003},
 the survival of the flattest effect \citep{wilke_evolution_2001},
 and the origins of reproductive division of labor \citep{goldsby_evolutionary_2014}.
-%% ---- editing --------- editing --------- editing --------- editing -----
 % @AML: next bit is a little awkward
- evolution of adaptive phenotypic plasticity \citep{clune_investigating_2007,lalejini_evolutionary_2016} and on the evolutionary consequences of fluctuating environments \citep{wilke_evolution_2001,canino-koning_fluctuating_2019}.
-
-Previous work in Avida characterized 
-
-fluctuating environments 
-
-\citep{clune_investigating_2007,lalejini_evolutionary_2016} experimentally demonstrated the \textit{de novo} evolution of adaptive phenotypic plasticity given the following four conditions (as identified by \cite{ghalambor_behavior_2010}): 
+Our experiments build directly on previous studies in Avida that characterized the \textit{de novo} evolution of adaptive phenotypic plasticity \citep{clune_investigating_2007,lalejini_evolutionary_2016} and studies that characterized the evolutionary consequences of fluctuating environments for populations of non-plastic digital organisms \citep{wilke_evolution_2001,canino-koning_fluctuating_2019}.
+Of particular relevance, \cite{clune_investigating_2007} and \cite{lalejini_evolutionary_2016} experimentally demonstrated that adaptive phenotypic plasticity can evolve given the following four conditions (as identified by \cite{ghalambor_behavior_2010}):
 (1) populations experience temporal environmental variation,
 (2) these environments are differentiable by reliable cues,
 (3) each environment favors different phenotypic traits,
 and (4) no single phenotype exhibits high fitness across all environments.
+% \cite{wilke_evolution_2001}....
+% \cite{canino-koning_evolution_2016}....
+We build on this previous work but shift our focus from the evolutionary causes of adaptive phenotypic plasticity to investigate its evolutionary consequences in a fluctuating environment.
 
-
-Here, we build on this previous work to facilitate the evolution adaptive plasticity in Avida, shifting our focus from the evolutionary causes of phenotypic plasticity to investigate its evolutionary consequences in a fluctuating environment.
-Here, we empirically investigate how adaptive phenotypic plasticity affects subsequent evolutionary dynamics in a fluctuating environment.
-
-Our experiments build directly on previous digital evolution studies on the evolution of adaptive phenotypic plasticity \citep{clune_investigating_2007,lalejini_evolutionary_2016} and on the evolutionary consequences of fluctuating environments \citep{wilke_evolution_2001,canino-koning_fluctuating_2019}.
-
-% Indeed, previous work experimentally demonstrated the \textit{de novo} evolution of adaptive phenotypic plasticity given these conditions in Avida \citep{clune_investigating_2007,lalejini_evolutionary_2016}.
-% Maybe this too: These experiments build directly on previous digital evolution studies on the evolution of adaptive phenotypic plasticity \citep{clune_investigating_2007,lalejini_evolutionary_2016} and on the evolutionary consequences of fluctuating environments \citep{wilke_evolution_2001,canino-koning_fluctuating_2019}.
-%% ---- editing --------- editing --------- editing --------- editing -----
+% Here, we empirically investigate how adaptive phenotypic plasticity affects subsequent evolutionary dynamics in a fluctuating environment.
 %%%%%%%%%%%%%%%%%
 
-
+% - what we did -
 Each of our experiments are divided into two phases: in phase one, we precondition sets of founder organisms with differing plastic or non-plastic adaptations;
 in phase two, we examine the subsequent evolution of populations founded with organisms from phase one under specific environmental conditions [figure].
 First, we examine the evolutionary histories of phase two populations to test whether adaptive plasticity constrained subsequent genomic and phenotypic changes. 
